Added password recovery with email
